--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,14 @@
     <scope>provided</scope>
 </dependency>
 
+<!-- Swagger OpenAPI - Springdoc -->
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.3.0</version>
+</dependency>
+
+
 
 
 	</dependencies>
