correccion en controlador

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,13 @@ security.api.key.enabled=true
 # Puerto del servidor
 server.port=8080
 
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
 # Configuración para subida de archivos (imágenes BLOB)
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
